--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,19 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+
+/* styles.css or a relevant CSS file */
+.spinner {
+  border: 2px solid transparent;
+  border-top-color: white; /* Change this to your preferred color */
+  border-radius: 50%;
+  width: 20px; /* Adjust size */
+  height: 20px; /* Adjust size */
+  animation: spin 0.6s linear infinite;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
